--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+h2 {
+    color: #333;
+    font-size: 2em;
+    text-align: center;
+}
+
+p {
+    color: #666;
+    font-size: 1.2em;
+    line-height: 1.5em;
+    text-align: center;
+}
+
+button {
+    background-color: #4CAF50;
+    /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 380px;
+    cursor: pointer;
+}
+
+.sumar {
+    text-align: center;
+    margin-left: 430px;
+}
+
+h3 {
+    color: #333;
+    font-size: 1.5em;
+    text-align: center;
+}
