--- a/src/app/hijo/hijo.component.html
+++ b/src/app/hijo/hijo.component.html
@@ -1,2 +1,2 @@
 <p>Hola {{nombre}}, presiona el botón para sumar:</p>
-<button class="sumar" (click)="sumarUno()">+1</button>
+<button (click)="sumarUno()">+1</button>
