--- a/src/app/padre/padre.component.html
+++ b/src/app/padre/padre.component.html
@@ -1,4 +1,8 @@
-<h2>Bienvenido, {{nombre}}</h2>
-<button (click)="cambiarNombre()">Cambiar Nombre</button>
-<app-hijo [nombre]="nombre" (sumar)="actualizarContador($event)"></app-hijo>
-<h3>Total acumulado: {{contadorTotal}}</h3>
+<div class="container">
+    <h2>Bienvenido, {{nombre}}</h2>
+    <button (click)="cambiarNombre()">Cambiar Nombre</button>
+
+    <app-hijo [nombre]="nombre" (sumar)="actualizarContador($event)"></app-hijo>
+
+    <h3>Total acumulado: {{contadorTotal}}</h3>
+</div>
